# analytics_pipeline

./: .gitignore  pyproject.toml
.tmp_dagster_home_z7_z8vz2/history/: runs.db
.tmp_dagster_home_z7_z8vz2/history/runs/: index.db
.tmp_dagster_home_z7_z8vz2/schedules/: schedules.db
src/analytics_pipeline/defs/: assets.py  resources.py
src/analytics_pipeline/defs/dashboard/: defs.yaml
src/analytics_pipeline/defs/ga4_duckdb_ingest/: defs.yaml  loads.py
src/analytics_pipeline/defs/ga4_duckdb_ingest/google_analytics/: __init__.py
src/analytics_pipeline/defs/transform/: defs.yaml
transform/jdbt/: .gitignore
